[gd_scene load_steps=13 format=2]

[ext_resource path="res://abilities/magic_abilities/basic_attack/basic_magic.gd" type="Script" id=1]
[ext_resource path="res://abilities/magic_abilities/basic_attack/sprites/Explosion_01.png" type="Texture" id=2]
[ext_resource path="res://abilities/magic_abilities/basic_attack/sprites/Explosion_02.png" type="Texture" id=3]
[ext_resource path="res://abilities/magic_abilities/basic_attack/sprites/Explosion_03.png" type="Texture" id=4]
[ext_resource path="res://abilities/magic_abilities/basic_attack/sprites/Explosion_04.png" type="Texture" id=5]
[ext_resource path="res://abilities/magic_abilities/basic_attack/sprites/Explosion_05.png" type="Texture" id=6]
[ext_resource path="res://abilities/magic_abilities/basic_attack/sprites/Explosion_06.png" type="Texture" id=7]
[ext_resource path="res://abilities/magic_abilities/basic_attack/sprites/Explosion_07.png" type="Texture" id=8]
[ext_resource path="res://abilities/magic_abilities/basic_attack/sprites/Explosion_08.png" type="Texture" id=9]
[ext_resource path="res://abilities/magic_abilities/basic_attack/sprites/Explosion_09.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 8 )

[node name="primary_magic" type="Area2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 3, -1 )
shape = SubResource( 2 )

[node name="limit" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_primary_magic_body_entered"]
[connection signal="animation_finished" from="sprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="limit" to="." method="_on_limit_timeout"]
